
[float]
===== Changed

- Align the default value of `sanitize_field_names` with other agents {pull}867[#867]
- Ensure max 4 digits of precision for `sample_rate` as per agent spec {pull}880[#880]

[float]
===== Fixed

- Fix Delayed::Job class names when used through ActiveJob {pull}869[#869]
- Fix Delayed::Job when run without the agent running {pull}874[#874]

[[release-notes-3.10.1]]
==== 3.10.1 (2020-08-26)

[float]
===== Fixed

- Remove secrets from cookies in errors {pull}863[#863]
- Silence deprecation warning when setting `ignore_url_patterns` to default {pull}865[#865]

[[release-notes-3.10.0]]
==== 3.10.0 (2020-08-26)

[float]
===== Added

- Config option `transaction_ignore_urls` to replace `ignore_url_patterns` {pull}844[#844]
- Prepend `(?-i)` to patterns to make them case-sensitive {pull}846[#846]

[float]
===== Fixed

- Reverted {pull}839[#839]
- Improved Kubernetes pod ID detection {pull}859[#859]

[[release-notes-3.9.0]]
==== 3.9.0 (2020-08-04)

[float]
===== Fixed
- Scrub request body of illegal UTF-8 characters {pull}832[#832]

[float]
===== Added

- Support for DynamoDB {pull}827[#827]

[float]
===== Fixed

- Fix Rails Engine views' paths being reported as absolute {pull}839[#839]
- Fix an issue when using Elasticsearch spy without a running agent {pull}830[#830]

[[release-notes-3.8.0]]
==== 3.8.0 (2020-06-18)

[float]
===== Added

- Add the option `capture_elasticsearch_queries` {pull}789[#789]
- Add option to skip patching Kernal#require {pull}812[#812]
- Add option `service_node_name` {pull}820[#820]

[float]
===== Fixed

- Allow underscores in hostnames in Net::HTTP spy {pull}804[#804]
- Don't change log level on logger object via remote config {pull}809[#809]
- Update and fix the Opentracing bridge {pull}791[#791]

[[release-notes-3.7.0]]
==== 3.7.0 (2020-05-14)

[float]
===== Changed

- Make config values dynamic so they can be changed via the remote config {pull}747[#747]