@@ -56,6 +56,7 @@ endif::[]
 
 - Fix Delayed::Job class names when used through ActiveJob {pull}869[#869]
 - Fix Delayed::Job when run without the agent running {pull}874[#874]
+- Fix Kubernetes related metadata {pull}882[#882]
 
 [[release-notes-3.10.1]]
 ==== 3.10.1 (2020-08-26)
